syntax = "proto3";

package io.protostuff.it;

option java_package = "io.protostuff.it.enum_test";

message ParentEnumMsg {
    NestedEnum nested_enum = 1;
    repeated NestedEnum nested_repeated_enum = 2;

    oneof EnumOneof {
        NestedEnum first = 3;
        EmptyEnum second = 4;
    }
}

enum NestedEnum {
    ZERO = 0;
    FIRST = 1;
    SECOND = 2;
    HUNDRED = 100;
}

enum EmptyEnum {

}

message TestUnknownEnumValue1 {
    E1 field = 1;
    enum E1 {
        A = 0;
        B = 1;
    }
}

message TestUnknownEnumValue2 {
    E2 field = 1;
    enum E2 {
        A = 0;
        B = 1;
        C = 2;
    }
}
